Fix attribute bars being misaligned

--- a/src/view/game/utils/bar.css
+++ b/src/view/game/utils/bar.css
@@ -30,4 +30,5 @@
 
 .attribute-label {
   padding: 0.25rem;
+  width: 15%;
 }
